# ai-project-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: setup.sh
