[tool.poetry]
name = "REPLACE_WITH_YOUR_NAME"
version = "0.1.0"
description = "REPLACE_WITH_YOUR_NAME"
authors = ["REPLACE_WITH_YOUR_NAME <REPLACE_WITH_YOUR_EMAIL>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
seaborn = "*"
torch = "*"
tensorflow = "*"
transformers = "*"
datasets = "*"
opencv-python-headless = "*"
plotly = "*"
tqdm = "*"
ipywidgets = "*"
notebook = "*"
jupyterlab = "*"
litetorch = { git = "https://github.com/42-CC-RNCP/litetorch.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
